<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/preference_general">

        <SwitchPreference
            android:defaultValue="true"
            android:key="checkUpdate"
            android:title="@string/preference_checkUpdate_title"
            android:summary="@string/preference_checkUpdate_summary" />
        <ListPreference
            android:defaultValue="default"
            android:entries="@array/preference_theme_entry"
            android:entryValues="@array/preference_theme_entryValue"
            android:key="theme"
            android:title="@string/preference_theme"
            app:useSimpleSummaryProvider="true"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preference_playback">

        <SwitchPreference
            android:defaultValue="true"
            android:key="handleAudioFocus"
            android:title="@string/preference_handleAudioFocus_title"
            android:summary="@string/preference_handleAudioFocus_summary"/>
        <SwitchPreference
            android:defaultValue="true"
            android:key="handleAudioBecomingNoisy"
            android:title="@string/preference_handleAudioBecomingNoisy_title"
            android:summary="@string/preference_handleAudioBecomingNoisy_summary"/>
        <SwitchPreference
            android:defaultValue="false"
            android:key="lowQuality"
            android:title="@string/preference_lowQuality_title"
            android:summary="@string/preference_lowQuality_summary" />
    </PreferenceCategory>
</PreferenceScreen>